--- a/src/views/user/login.ejs
+++ b/src/views/user/login.ejs
@@ -13,21 +13,20 @@
     <body>
         <div class="container">
 
-            <form method="post" action=" /users/login/">
+            <form action="/users/login" method="post"   enctype="multipart/form-data" > 
 
                 <h2>Iniciar sesión</h2>
                 <div class="form-body">
                     <i class="fas fa-user"></i>
-                    <input class="controls" type="email" placeholder="Usuario">
+                  <input class="controls" type="email"  id="email" name="email" placeholder="Usuario">
+                <div class="form-body">
                     <% if(locals.errors && errors.email) { %>
                         <div class="error-registro">
                            <%= errors.email.msg %> 
                         </div>
                            <% } %> 
-                </div>
-                <div class="form-body">
                     <i class="fas fa-lock"></i>
-                    <input class="controls" type="password" value="" placeholder="Contraseña">
+                    <input class="controls" type="password" value="" id="password" name="password" placeholder="Contraseña">
                 </div>
                 <div class="form-body">
                     <input class="buttons" type="submit" Value="Ingresar">
