--- a/src/views/user/login.ejs
+++ b/src/views/user/login.ejs
@@ -13,39 +13,41 @@
     <body>
         <div class="container">
 
-            <form action="/users/login" method="post"   enctype="multipart/form-data" > 
+            <form action="/users/login" method="post">
 
                 <h2>Iniciar sesión</h2>
                 <div class="form-body">
                     <i class="fas fa-user"></i>
-                  <input class="controls" type="email"  id="email" name="email" placeholder="Usuario">
+                    <input class="controls" type="email" id="email" name="email" placeholder="Usuario">
+                </div>
                 <div class="form-body">
                     <% if(locals.errors && errors.email) { %>
-                        <div class="error-registro">
-                           <%= errors.email.msg %> 
+                        <div class="error-login">
+                            <%= errors.email.msg %>
                         </div>
-                           <% } %> 
-                    <i class="fas fa-lock"></i>
-                    <input class="controls" type="password" value="" id="password" name="password" placeholder="Contraseña">
+                        <% } %>
+                            <i class="fas fa-lock"></i>
+                            <input class="controls" type="password" value="" id="password" name="password"
+                                placeholder="Contraseña">
                 </div>
+
                 <div class="form-body">
                     <input class="buttons" type="submit" Value="Ingresar">
                 </div>
-        </div>
 
-        <div class="contra">
-            <a href="#">¿Olvido su contraseña?</a>
-        </div>
+                <div class="contra">
+                    <a href="#">¿Olvido su contraseña?</a>
+                </div>
 
 
-        <div class="login"> <br>
-            <h2>Ingresar con red social</h2> <br>
-        </div>
-        <div class="login-items">
-            <a href="#" class="fb"><i class="fab fa-facebook"></i></a>
-            <a href="#" class="tw"><i class="fab fa-twitter"></i></a>
-            <a href="#" class="correo"><i class="fas fa-envelope-square"></i></a><br>
-        </div>
+                <div class="login"> <br>
+                    <h2>Ingresar con red social</h2> <br>
+                </div>
+                <div class="login-items">
+                    <a href="#" class="fb"><i class="fab fa-facebook"></i></a>
+                    <a href="#" class="tw"><i class="fab fa-twitter"></i></a>
+                    <a href="#" class="correo"><i class="fas fa-envelope-square"></i></a><br>
+                </div>
         </div>
         </form>
     </body><br>
