--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -9,9 +9,17 @@
             </div>
         </div>
 
-        <div class="carrito_login"> <a href="/cart"><i class="fas fa-shopping-basket"></i></a> </div>
-        <div class="user"> <a href="/users/login"> <i class="far fa-user-circle"></i> </a> </div>
-        <div class="registro-home"> <a href="/users/register"> <i class="far fa-address-card"></i> </a> </div>
+       <!--ACA TENDRIA QUE IR EL PERFIL DEL LOGIN--> 
+       <% if(user){ %>
+        <div><img src="./imagenes/users/<%-user.image%>" alt=""></div>
+    
+     <% }else{ %>
+        
+     
+       <div class="carrito_login"> <a href="/cart"><i class="fas fa-shopping-basket"></i></a> </div>
+       <div class="user"> <a href="/users/login"> <i class="far fa-user-circle"></i> </a> </div>
+       <div class="registro-home"> <a href="/users/register"> <i class="far fa-address-card"></i> </a> </div>
+       <% } %>
         <!-- BARRA BUSQUEDA -->
 
         <div class="flexsearch">
