--- a/public/css/header.css
+++ b/public/css/header.css
@@ -92,6 +92,22 @@ body{
     padding: 10px;
     border-radius: 6px;
 }
+.img_user{
+    position: absolute;
+    left: 95%;
+    top: 57px;
+}
+.img_1{
+    width: 30px;
+    border-radius:40px;
+    display: flex;
+    justify-content: center
+}
+.logout{
+    position: absolute;
+    left: 87%;
+    top: 57px;
+}
 
 @media(min-width: 576px){
 
