--- a/src/views/cart.ejs
+++ b/src/views/cart.ejs
@@ -55,7 +55,7 @@
     </div>
         <div id="buttons-container">
             <button>
-                Codigo de cupon
+                Código de cupon
             </button>
             <button>
                 Aplicar cupon
@@ -89,7 +89,7 @@ Envio
             </td>
             <td class="padding">
                 Acordar Envio <br> las actualizaciones de envio se actualizaran durante el pago. <br><br>
-              Calcular envio
+              Calcular envío
             </td>
         </tr>
           <tr>
@@ -110,7 +110,7 @@ $125.000
            </div>
            <div>
         <button>
-            Nro de la tarjeta de regalo
+            Número de la tarjeta de regalo
         </button>
         <button>
             Aplicar
