--- a/src/views/user/register.ejs
+++ b/src/views/user/register.ejs
@@ -6,7 +6,7 @@
    <%- include ('../partials/head.ejs') %>
       <link rel="stylesheet" href="/css/register.css">
       <title>HANGAR</title>
-
+      <script src="../../../public/validaciones.js" defer></script>
 </head>
 
 <body>
@@ -61,7 +61,6 @@
 
          </form>
 
-         <script src="../../../public/validaciones.js"></script>
 
 </body>
 <footer>
