--- a/public/css/stylelogin.css
+++ b/public/css/stylelogin.css
@@ -146,3 +146,13 @@ margin: 7px  5px;
   display:block;
 }
 }
+
+#passwordError {
+  color:red;
+  display: none;
+}
+
+#emailError {
+  color: red;
+  display: none;
+}
