--- a/src/views/user/login.ejs
+++ b/src/views/user/login.ejs
@@ -13,12 +13,15 @@
     <body>
         <div class="container">
 
-            <form action="/users/login" method="post">
+            <form action="/users/login" method="post" id = "login">
 
                 <h2>Iniciar sesión</h2>
                 <div class="form-body">
                     <i class="fas fa-user"></i>
                     <input class="controls" type="email" id="email" name="email" placeholder="Usuario">
+                    <span id = "emailError">
+                        debes ingresar un email
+                    </span>
                 </div>
                 <div class="form-body">
                     <% if(locals.errors && errors.email) { %>
@@ -29,6 +32,10 @@
                             <i class="fas fa-lock"></i>
                             <input class="controls" type="password" value="" id="password" name="password"
                                 placeholder="Contraseña">
+
+                                <span id = "passwordError">
+                                    la contraseña tiene que ser mayor a cinco caracteres
+                                </span>
                 </div>
 
                 <div class="form-body">
@@ -50,6 +57,40 @@
                 </div>
         </div>
         </form>
+
+        <script> 
+        
+        const form = document.querySelector('#login')
+        let emailError = document.querySelector('#emailError')
+        let password = document.querySelector('#password')
+        let email = document.querySelector("#email")
+        let passwordError = document.querySelector("#passwordError")
+        form.addEventListener('submit', (e) => {
+            e.preventDefault()
+            if (password.value.length < 5){
+            passwordError.style.display = "block"
+            }
+    
+             else if (email.value.length <= 0) {
+              emailError.style.display = 'block'
+            }
+
+            else {
+                form.submit()
+            }
+         
+        })
+
+        password.addEventListener("focus", () => {
+            passwordError.style.display = "none"
+        } )
+
+        email.addEventListener('focus', () => {
+            emailError.style.display = 'none'
+        })
+
+        </script>
+
     </body><br>
     <%- include ('../partials/footer.ejs') %>
 
