levantando el proyecto con la base de datos. no funciona el crud

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -26,7 +26,7 @@
         </div>
         
         <div class="img_destacados">
-            <% product.forEach(element => { %>
+            <% productos.forEach(element => { %>
                 <div class="productos">
                     <p class=""> HOT SALE!! </p>
                    <img width="170px" height="200px" src="<%= element.image%>" alt="imagen producto1 ">
