--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -18,7 +18,7 @@
             <div class="linea">
                 ------------------------
             </div>
-            <a href='/product/' class="nuestroProd">
+            <a href='/product/create' class="nuestroProd">
                  <p > NUESTROS PRODUCTOS  </p> </a>
             <div class="linea">
                 ------------------------
