--- a/src/views/productList.ejs
+++ b/src/views/productList.ejs
@@ -8,7 +8,7 @@
     </head>
 
 <body>
-    <%- include ('./partials/header.ejs') %>
+    <%- include ('./partials/head) %>
     <main>
        
         <div class="img_destacados">
