--- a/src/views/detail.ejs
+++ b/src/views/detail.ejs
@@ -4,7 +4,7 @@
 <head>
 
     <%- include ('./partials/head.ejs') %>
-        <link rel="stylesheet" href="/css/product.css">
+        <link rel="stylesheet" href="../../public/css/product.css">
         <title>HANGAR</title>
 
 </head>
