--- a/src/views/editProduct.ejs
+++ b/src/views/editProduct.ejs
@@ -13,76 +13,59 @@
     <%- include ('./partials/header.ejs') %>
 
         <section class="container">
-            <form class="modificar-producto" action="/product/<%= productToFind.id %>?_method=put" method="post">
+            <form class="modificar-producto" action="/product/edit/<%= productToFind.id %>" method="delete">
                 <div class=" encabezado">
                     <h1>Eliminar / Modificar Producto</h1>
                 </div>
                 <div class="name">
                     <label for="name">Nombre del producto</label>
-                    <input id="name" type="text" name="name" value="<%= productToFind.name %> ">
+                    <input id="name" type="text" name="nombre" value="<%= productToFind.nombre %> ">
                 </div>
                 <div class="description">
                     <label for="description">Descripcion del producto</label>
                     <textarea id="description" type="text"
-                        name="description"> <%= productToFind.description %> </textarea>
+                        name="descripcion"> <%= productToFind.descripcion %> </textarea>
                 </div>
                 <div class="img-eliminar-product">
                     <label for="imagen">Imagen del producto</label>
-                    <input id="imagen" type="file">
+                    <input id="imagen" type="file"value="<%= productToFind.nombre %>" name="image">
                 </div>
                 <div class="category">
                     <label for="category" class="form-label">Categoría:</label>
-                    <select name="category" id="category" class="form-input">
-                        <option value="">Elegí</option>
-                        <option <% if(productToFind.category=='in-sale' ) {%>
+                    <select name="producto_categoria_id" id="category" class="form-input">
+                     
+                        <option <% if(productToFind.producto_categoria_id=='1' ) {%>
                             selected
                             <% } %>
-
-                                value="in-sale" >En oferta
+                                value="1" >En oferta
                         </option>
-
-                        <option>
-                        <option <% if(productToFind.category=='visited' ) {%>
+                      
+                        <option <% if(productToFind.producto_categoria_id=='2' ) {%>
                             selected
                             <% } %>
-
-                                value="visited" >Últimos visitados
+                                value="2" >Últimos visitados
                         </option>
+                        
                     </select>
                 </div>
 
                 <div class="discount">
                     <label for="discount">Descuento del producto</label>
-                    <input id="discount" type="text" name="discount" value="<%= productToFind.discount %> ">
+                    <input id="discount" type="text" name="descuento" value="<%= productToFind.descuento %> ">
                 </div>
 
-                <!--<div class="product-color">
-                    <label for="color">Color del producto</label>
-                    <input id="color" type="color">
-                </div>
-                <div class = "product-tam">
-            <label for="tamanio">Tamaño</label>
-            <select  class = "button-tam" name = "tamanio">
-                <option disabled="">Seleccione una Opcion</option>
-                        <option value="ESTANDAR">ESTANDAR</option>
-                        <option value="GRANDE">GRANDE</option>
-                        <option value="CHICO/A">CHICO/A</option>
-            </select>
-        </div><-->
                 <div class="price">
                     <label for="price">Precio del producto</label>
-                    <input id="price" type="text" name="price" value="<%= productToFind.price %> ">
+                    <input id="price" type="text" name="precio" value="<%= productToFind.precio %> ">
                 </div>
 
-                <button class="edit"> MODIFICAR</button>
+                <button class="edit" type="submit"> MODIFICAR</button>
 
             </form>
             <div class="box-buttonDelete">
-                <form class="eliminar-producto" action="/product/<%= productToFind.id %>?_method=delete" method="post">
-
+                <form class="eliminar-producto" action="/delete/<%= productToFind.id %>" method="delete">
                     <button type="submit" class="delete"
                         onclick="return confirm('Estas seguro que deseas eliminar este producto?')"> ELIMINAR </button>
-
                 </form>
             </div>
 
