--- a/src/views/productList.ejs
+++ b/src/views/productList.ejs
@@ -12,7 +12,7 @@
     <main>
        
         <div class="img_destacados">
-            <% product.forEach(element => { %>
+            <% products.forEach(element => { %>
              <div class="productos">
                 <img width="170px" height="200px" src="<%= element.image%>" alt="imagen producto1 ">
                 <div class="info">
