--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -19,7 +19,7 @@
                 ------------------------
             </div>
             <a href='/product/create' class="nuestroProd">
-                 <p > NUESTROS PRODUCTOS  </p> </a>
+                 <p> CARGAR PRODUCTO  </p> </a>
             <div class="linea">
                 ------------------------
             </div>
@@ -29,10 +29,10 @@
             <% productos.forEach(element => { %>
                 <div class="productos">
                     <p class=""> HOT SALE!! </p>
-                   <img width="170px" height="200px" src="<%= element.image%>" alt="imagen producto1 ">
+                   <img width="170px" height="200px" src="./imagenes/<%= element.image%>" alt="imagen producto1 ">
                    <div class="info">
-                       <p class="descripcion"> <%= element.name%> </p>
-                       <p class="precio">$ <%= element.price%> </p>
+                       <p class="descripcion"> <%= element.nombre%> </p>
+                       <p class="precio">$ <%= element.precio%> </p>
                        <div class="container-button">
                            <a class="boton-lampara" href="/product/detail/<%= element.id%>"> <button class="button-carrito-home"><span>Ver producto</span></button> </a>
                        </div>
