--- a/public/css/createProduct.css
+++ b/public/css/createProduct.css
@@ -1,3 +1,11 @@
+#formProduct {
+    font-family: "Montserrat", sans-serif;
+    font-weight: bold;
+    opacity: none;
+    text-align: center;
+    color : rgb(0, 0, 0)
+}
+
 
 .cargar-producto{
     display: flex;
@@ -29,7 +37,7 @@
     padding: 5px;
     display: flex;
     flex-direction: column;
-    color:rgb(82, 78, 78)
+    color:rgb(0, 0, 0)
 }
 
 .container{
@@ -60,4 +68,19 @@ h1{
 }
 .encabezado{
     margin-top: 5px;
+}
+
+#nombreerror {
+    color: red;
+    display: none;
+}
+
+#errordescription {
+    color: red;
+    display: none;
+}
+
+#errorimagen {
+    color: red;
+    display: none;
 }
