--- a/public/css/register.css
+++ b/public/css/register.css
@@ -1,7 +1,3 @@
-.categorias{
-  display: none;
-}
-/*FORMULARIO REGISTRO*/
 .registro{
     padding: 30px;
     width: 100%;
@@ -26,18 +22,19 @@
     border: none;
     outline: none;
     border-bottom: 1px solid;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', sans-serif; 
 }
 #tituloform{
     text-align: center;
 }
-form #fullName{
+form #full_name{
+    text-align: center;
     border-radius: 5px;
     width:75%;
     transition: .5s, color .3s;
-    text-align: center;
     font-weight: bold;
     padding: 5px;
+
 }
 
 form #email{
