quitado de numero decimales en las cuotas sin interes

--- a/src/views/detail.ejs
+++ b/src/views/detail.ejs
@@ -32,7 +32,7 @@
                                 <p><i class="far fa-credit-card"></i></p>
                                 <strong class="cuotas"> 6 </strong>
                                 <p> CUOTAS SIN INTERES DE</p>
-                                <strong class="precio-cuotas"> $ <%= productToFind.precio  / 6 %> </strong>
+                                <strong class="precio-cuotas"> $ <%= (productToFind.precio  / 6).toFixed() %> </strong>
                             </div>
                             <div class="descuento-efectivo">
                                 <p><i class="far fa-money-bill-alt"></i></p>
